--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="elm-app"></div>
 
-    <script src="elm.js"></script>
+    <script src="../elm.js"></script>
     <script>
         var app = Elm.Main.init({
             node: document.getElementById("elm-app")
