--- a/index.html
+++ b/index.html
@@ -5,15 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sorting algorithms</title>
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="./styles/main.css">
 </head>
 
 <body>
     <div id="elm-app"></div>
 
-    <script src="elm.js"></script>
+    <script type="module" src="./index.js"></script>
     <script>
-
         const STORAGE_KEY = 'SORTER_CONFIG'
         var app = Elm.Main.init({
             node: document.getElementById("elm-app")
